hphp/hack/test/typecheck/reactive/parse_multiple3.php.exp
File "parse_multiple3.php", line 4, characters 3-28:
Only one of following annotations is allowed: `__Pure`, `__Rx`, `__RxShallow`, `__RxLocal`, `__NonRx`, `__Cipp`, `__CippLocal`, `__CippGlobal`. (Parsing[1002])
